updates except for the DQN

--- a/A2/hw2_Tabular_DQN.ipynb
+++ b/A2/hw2_Tabular_DQN.ipynb
@@ -1142,12 +1142,10 @@
     "            nn.ReLU(),\n",
     "            nn.Linear(256, action_size, True),\n",
     "            )\n",
-    "        \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.layers(torch.flatten(x, 1))\n",
-    "        return F.log_softmax(x, dim=1)\n",
-    "\n",
+    "        return self.layers(torch.flatten(x, 1))\n",
+    "        \n",
     "    def select_action(self, state):\n",
     "        self.eval()\n",
     "        x = self.forward(state)\n",
@@ -1167,7 +1165,7 @@
     "\n",
     "- **[2 pts]** Similarly, describe the output.\n",
     "\n",
-    "There are 2 hidden layers with 256 neurons each and the final layer just maps the output to 2 actions with a log likelihood softmax.\n"
+    "There are 2 hidden layers with 256 neurons each and the final layer just maps the output to the logits of the two actions.\n"
    ]
   },
   {
@@ -1205,7 +1203,7 @@
     "\n",
     "model = MyModel(state_size=4, action_size=2).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "loss_function = torch.nn.NLLLoss()"
+    "loss_function = torch.nn.CrossEntropyLoss()"
    ]
   },
   {
@@ -1639,7 +1637,7 @@
    "source": [
     "In DQN, we are using the same model as in task 1 for behavioral cloning. In both tasks the model receives as input the state and in both tasks the model outputs something that has the same dimensionality as the number of actions. These two outputs, though, represent very different things. What is each one representing?\n",
     "\n",
-    "**YOUR ANSWER HERE**"
+    "In BC, the output is logits/probabilities of each action but in DQN, the ouput is the Q value."
    ]
   },
   {
