Some detail improvement

--- a/A2/hw2_Tabular_DQN.ipynb
+++ b/A2/hw2_Tabular_DQN.ipynb
@@ -1166,7 +1166,7 @@
     "\n",
     "- **[2 pts]** Similarly, describe the output.\n",
     "\n",
-    "There are 2 hidden layers with 32 neurons each and the final layer just maps the output to the logits of the two actions.\n"
+    "There are 2 hidden layers with 32 neurons each and the final layer just maps the output to the logits (probability value) of the two actions.\n"
    ]
   },
   {
@@ -1603,7 +1603,7 @@
    "source": [
     "**[2 pts]** Did you manage to learn a good policy? How consistent is the reward you are getting?\n",
     "\n",
-    "The learned policy is better than the tabular Q learning and faster as well. The average reward is around 260. It has a 50ish variance. "
+    "The learned policy is better than the tabular Q learning and faster as well. For consistency, the average reward is around 260. It has a 50ish variance. "
    ]
   },
   {
@@ -1662,6 +1662,7 @@
    "source": [
     "## PLACEHOLDER TO INSERT YOUR optimize_model function here:\n",
     "\n",
+    "# Without replay buffer\n",
     "def optimize_model(state, action, next_state, reward, done):\n",
     "    # TODO given a tuple (s_t, a_t, s_{t+1}, r_t, done_t) update your model weights\n",
     "    state_torch = torch.tensor(state, device=device, dtype=torch.float32).unsqueeze(0)\n",
