--- a/A3/hw3_policy_gradients.ipynb
+++ b/A3/hw3_policy_gradients.ipynb
@@ -22,7 +22,7 @@
     "- **We recommend working in groups of two**. List your names and student numbers below (if you use a different name on Canvas).\n",
     "\n",
     "<ul style=\"list-style-type: none; font-size: 1.2em;\">\n",
-    "<li>Name (and student ID):</li>\n",
+    "<li>Name (and student ID):Xindong Lin 70057328</li>\n",
     "<li>Name (and student ID):</li>\n",
     "</ul>\n",
     "\n",
@@ -156,29 +156,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0015, 0.0455, 0.2041, 0.7489], grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ANSWERS for Task 1\n",
+    "# Some code for verification of the computation results\n",
+    "import torch\n",
+    "from torch.distributions.categorical import Categorical\n",
+    "from torch.distributions.normal import Normal\n",
     "\n",
-    "# 1.a\n",
+    "logits = torch.tensor([-2.5, 0.9, 2.4, 3.7], requires_grad=True)\n",
+    "cat = Categorical(logits=logits)\n",
+    "cat.probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0015, 0.0455, 0.2041, 0.7489], grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soft_cat = torch.nn.functional.softmax(logits, dim=0)\n",
+    "soft_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.0015, -0.0455,  0.7959, -0.7489])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_t = torch.tensor(2)\n",
+    "logp = cat.log_prob(a_t)\n",
+    "logp.backward()\n",
+    "print(logits.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.2718, -0.5437])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mus = torch.tensor([0.0, 1.2], requires_grad=True)\n",
+    "actions = torch.tensor([0.1, 1.0], requires_grad=True)\n",
+    "stds = torch.exp(-0.5 * torch.ones(2, requires_grad=True))\n",
+    "norm = Normal(mus, stds)\n",
+    "logp_norm = norm.log_prob(actions).sum(axis=-1)\n",
+    "logp_norm.backward()\n",
+    "print(mus.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANSWERS for Task 1\n",
     "\n",
-    "# 1.b\n",
+    "#### 1.a\n",
     "\n",
-    "# 1.c\n",
+    "There is a basic network defined for both the discrete and Gaussian actor. It has 1 hidden layer that contains 200 neurons.\n",
+    "For the discrete actor, we mapped from the state to logits of the actions. Categorical distribution is used here for transforming the logits into probabilities. Actions are sampled from this.\n",
+    "For the Gaussian actor, we mapped from the state to the means of the Gaussians for each action. A standard deviation of e^(-0.5) is initialized and learnt later. Actions are sample from a Normal distribution of the mean and standard deviation.\n",
+    "For the ActorCritic module, it contains an actor which is either discrete or Gaussian and also a value function that has the same network structure as the actor.\n",
     "\n",
-    "# 1.d\n",
+    "#### 1.b\n",
+    "The \"Categorical\" uses the logits as log probabilities. So it will use a softmax to transform it to probabilities, i.e. take e^logits and normalize by divided the sum of all e^logits. See the above cells for result.\n",
     "\n",
-    "# 1.e\n",
+    "The probabilities are tensor([0.0015, 0.0455, 0.2041, 0.7489]).\n",
     "\n",
-    "# 1.f\n",
+    "#### 1.c\n",
+    "The categorical itself is a discrete distribution so it doesn't have any gradient to compute. However, the softmax of the logits can have a gradient propogated back. Since probs = softmax(logits), we can compute gradient of the softmax wrt the logits. Specifically, in this case, we can have $$log(\\pi(a_t))=log(\\frac{e^{\\text{logits}[a_t]}}{\\sum_i e^{\\text{logits}[a_i]}})=\\text{logits}[a_t] - log(\\sum_i e^{\\text{logits}[a_i]})$$, so the gradient for the $a_t$ entry is $$1-\\frac{e^{\\text{logits}[a_t]}}{\\sum_i e^{\\text{logits}[a_i]}}=1-\\text{probs}[a_t]$$.\n",
+    "The rest entries are $$-\\frac{e^{\\text{logits}[a_i]}}{\\sum_i e^{\\text{logits}[a_i]}}=-\\text{probs}[a_i]$$\n",
     "\n",
-    "# 1.g\n",
+    "See the above cells for result. The result is tensor([-0.0015, -0.0455,  0.7959, -0.7489]), which matches the formula above.\n",
     "\n",
-    "# 1.h\n",
+    "#### 1.d\n",
+    "We've already developed the formula for policy gradient in class so I'll directly use them here. \n",
+    "$$\\nabla_\\mu log(\\pi_{\\mu}(a_t)) = 1/\\sigma^2(a_t - \\mu)$$\n",
+    "Plugged in the formula we get \n",
+    "$$\\nabla_\\mu log(\\pi_{\\mu}(a_t)) = e(a_t - \\mu) = e[0.1,-0.2]$$\n",
+    "See above cells for a result from code tensor([ 0.2718, -0.5437]). The results match each other.\n",
     "\n",
-    "# 1.i"
+    "#### 1.e\n",
+    "The gradients provide a direction that the policy should shift to make the action more probable. For example, in the Gaussian case 1.d, the mean of the Gaussian distribution for axis 0 should shift right to let the mean get closer to 0.1 so that action is more probable. For the discrete case, the logits of the action that's sampled will increase to make that action more probable.\n",
+    "\n",
+    "#### 1.f\n",
+    "The paper states that using the advantage function yields almost the lowest possible variance. This is because the advantage function measures whether or not the action is better or worse than the policy’s default behavior, which gives a good direction for the update.\n",
+    "\n",
+    "#### 1.g\n",
+    "I'll call it after line 3 in the algorithm, i.e. after \"Simulate current policy pi until N timesteps are obtained.\". The `finish_path` function will then calculate all the deltas and advantages for the path. The `adv_buf` line corresponds to the last line in the equation (16) in the paper.\n",
+    "\n",
+    "#### 1.h\n",
+    "Except for the logging code, the main flow in as follows. \n",
+    "\n",
+    "- Initialize the environment, model and set up all the initial attributes.\n",
+    "- Define the loss function for the actor and critic.\n",
+    "- Define the optimizer to be Adam\n",
+    "- Define the policy update function\n",
+    "    - first get the old policy loss (didn't get used anywhere, sounds like it's for TRPO)\n",
+    "    - for a couple update iterations, compute loss and update parameters\n",
+    "    - do the same for the value function\n",
+    "- Then starts the training loop.\n",
+    "    - For each epoch, we collect data for max 1000 steps. Store those in the buffer.\n",
+    "    - Do a bunch of episode ending check (Will be discussed in the next question)\n",
+    "    - Use buffer to calculate the advantage functions and value functions\n",
+    "    - Perform the gradient update\n",
+    "- The buffer won't get reset. The new results just overwrite the old ones using pointers.\n",
+    "\n",
+    "#### 1.i\n",
+    "\n",
+    "We collect max 1000 steps of data before the optimization step w/ default args. For the update step, policy uses 4 steps and value functions uses 40 steps.\n",
+    "\n",
+    "In terms of the termination/timeout handling,\n",
+    "- timeout: the episode length > max_ep_len (default 1000)\n",
+    "- d: done from environment\n",
+    "- truncated: truncated from environment\n",
+    "- terminal: either 3 of the above\n",
+    "- epoch_ended: reached the end of epoch, i.e. in the last step within the steps_per_epoch (default 1000)\n",
+    "\n",
+    "If it's epoch_ended, the last reward is kept. Otherwise, if the episode terminates, the last step reward is 0."
    ]
   },
   {
@@ -444,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
