finish all the coding

--- a/A3/hw3_policy_gradients.ipynb
+++ b/A3/hw3_policy_gradients.ipynb
@@ -349,7 +349,37 @@
    "source": [
     "# ANSWERS for Task 2\n",
     "\n",
-    "# Copy your completed functions (or relevant sections) from main.py and paste them here"
+    "# Copy your completed functions (or relevant sections) from main.py and paste them here\n",
+    "def compute_loss_pi(batch):\n",
+    "        obs, act, psi, logp_old = batch['obs'], batch['act'], batch['psi'], batch['logp']\n",
+    "        pi, logp = ac.pi(obs, act)\n",
+    "\n",
+    "        # Policy loss\n",
+    "        if args.loss_mode == 'vpg':\n",
+    "            # TODO (Task 2): implement vanilla policy gradient loss\n",
+    "            loss_pi = - (logp * psi).mean()\n",
+    "        elif args.loss_mode == 'ppo':\n",
+    "            # TODO (Task 4): implement clipped PPO loss\n",
+    "            pass\n",
+    "        else:\n",
+    "            raise Exception('Invalid loss_mode option', args.loss_mode)\n",
+    "\n",
+    "        # Useful extra info\n",
+    "        approx_kl = (logp_old - logp).mean().item()\n",
+    "        ent = pi.entropy().mean().item()\n",
+    "        pi_info = dict(kl=approx_kl, ent=ent)\n",
+    "\n",
+    "        return loss_pi, pi_info\n",
+    "\n",
+    "# Set up function for computing value loss\n",
+    "def compute_loss_v(batch):\n",
+    "    obs, ret = batch['obs'], batch['ret']\n",
+    "    v = ac.v(obs)\n",
+    "    # TODO: (Task 2): compute value function loss\n",
+    "    loss_v = nn.functional.mse_loss(v.squeeze(), ret)\n",
+    "    return loss_v\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -510,7 +540,30 @@
     "\n",
     "# Copy your completed function (or relevant sections) here\n",
     "# Include any screenshots, logs, etc\n",
-    "# Describe anything else you have tried"
+    "# Describe anything else you have tried\n",
+    "def compute_loss_pi(batch):\n",
+    "        obs, act, psi, logp_old = batch['obs'], batch['act'], batch['psi'], batch['logp']\n",
+    "        pi, logp = ac.pi(obs, act)\n",
+    "\n",
+    "        # Policy loss\n",
+    "        if args.loss_mode == 'vpg':\n",
+    "            # TODO (Task 2): implement vanilla policy gradient loss\n",
+    "            loss_pi = - (logp * psi).mean()\n",
+    "        elif args.loss_mode == 'ppo':\n",
+    "            # TODO (Task 4): implement clipped PPO loss\n",
+    "            pi_ratio = torch.exp(logp - logp_old)\n",
+    "            surr1 = pi_ratio * psi\n",
+    "            surr2 = torch.clamp(pi_ratio, 1-args.clip_ratio, 1+args.clip_ratio) * psi\n",
+    "            loss_pi = - torch.min(surr1, surr2).mean()\n",
+    "        else:\n",
+    "            raise Exception('Invalid loss_mode option', args.loss_mode)\n",
+    "\n",
+    "        # Useful extra info\n",
+    "        approx_kl = (logp_old - logp).mean().item()\n",
+    "        ent = pi.entropy().mean().item()\n",
+    "        pi_info = dict(kl=approx_kl, ent=ent)\n",
+    "\n",
+    "        return loss_pi, pi_info"
    ]
   },
   {
